--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,15 @@ dependencies:
   cloud_firestore: ^4.13.2
   uuid: ^4.2.1
   shared_preferences: ^2.2.2
+  flutter_native_splash: ^2.3.6
+
+flutter_native_splash:
+  android: true
+  ios: true
+  web: true
+
+  color: "#FFFFFF"
+  image: "assets/images/logo.png"
 
 dev_dependencies:
   flutter_lints: ^2.0.0
